Fix image on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -42,4 +42,5 @@ body {
   background: url("../images/bajas_sleeping.png") center no-repeat;
   background-size: cover;
   margin-right: 0px;
+  min-height: 300px;
 }
