--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,8 @@
   flex: 1;
   background: url("../images/marco_duck_water.png") center no-repeat;
   background-size: cover;
+  width: 100%;
+  min-height: 300px;
 }
 
 /* About us */
@@ -40,14 +42,16 @@
   flex: 1;
   background: url("../images/groupphoto.png") center no-repeat;
   background-size: cover;
+  width: 100%;
+  min-height: 300px;
 }
 
 /* Latest Posts */
 .latest-posts-section {
   display: flex;
   flex-direction: column;
-  margin-left: 60px;
-  margin-right: 60px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .latest-posts-section > h2 {
@@ -56,10 +60,9 @@
 
 .blog-list-carousel {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 20px;
   margin-bottom: 50px;
-  /*position: relative;*/
 }
 
 .blog-list-carousel-nav {
