--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,3 @@
-@media (min-width: 360px) {
-}
-
 @media (min-width: 601px) {
   /* Fonts */
   h1 {
@@ -25,6 +22,11 @@
   .about-section,
   .about-us {
     flex-direction: row;
+  }
+
+  /* Latest Posts */
+  .blog-list-carousel {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   /* Our Dogs */
@@ -80,6 +82,16 @@
   .intro-information p,
   .about-information p {
     margin-right: 200px;
+  }
+
+  /* Latest Posts */
+  .latest-posts-section {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+
+  .blog-list-carousel {
+    grid-template-columns: repeat(4, 1fr);
   }
 
   /* Our Dogs */
